--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
-numpy
-librosa
-pandas
-matplotlib
+streamlit==1.33.0
+numpy==1.26.4
+librosa==0.10.2
+matplotlib==3.8.4
+pandas==2.2.2
+requests==2.31.0
+pydub==0.25.1
